// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapse /> orientations orientation "horizontal" after animation 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: visible;
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: auto;
  width: auto;
}

<div
    class="emotion-0"
  >
    <div>
      <div>
        Inside
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Collapse /> orientations orientation "horizontal" before animation 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: hidden;
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: auto;
  width: 0;
  visibility: hidden;
}

<div
    class="emotion-0"
  >
    <div>
      <div>
        Inside
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Collapse /> orientations orientation "vertical" after animation 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: visible;
  -webkit-transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: auto;
}

<div
    class="emotion-0"
  >
    <div>
      <div>
        Inside
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Collapse /> orientations orientation "vertical" before animation 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: hidden;
  -webkit-transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: 0;
  visibility: hidden;
}

<div
    class="emotion-0"
  >
    <div>
      <div>
        Inside
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Collapse /> should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: hidden;
  -webkit-transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: 0;
  visibility: hidden;
}

<div
    class="my-class-name emotion-0"
  >
    <div>
      Inside
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Collapse /> should render with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: hidden;
  -webkit-transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: 0;
  visibility: hidden;
}

<div
    class="emotion-0"
  >
    <div>
      Inside
    </div>
  </div>
</DocumentFragment>
`;
